first attempt fixing workflow
with the 2 websites

--- a/index.html
+++ b/index.html
@@ -58,12 +58,22 @@
         <span class="op">Open</span><br>
         <span class="ge">Geneva</span><br>
         <span class="stretch" style="text-shadow: 3px 3px 0px #1c1c1c;">HACKATHONS</span><br>
-        <span class="date" style="text-shadow: 3px 3px 0px #1c1c1c;">12 - 14 May 2017</span>
+        <span class="date" style="text-shadow: 3px 3px 0px #1c1c1c;">12 - 14 May 2017</span><br><br><br>
+
+        <h1><a href="/blog" class="button style2"> &nbsp; Participez à un Hackathon  &nbsp;  / &nbsp; Join a Hackathon &nbsp; </a></h1><br><br>
+        <h1><a href="/blog" class="button style2"> &nbsp; Trouver un Hackathon pour votre projet &nbsp;  / &nbsp; Find a Hackathon for your proejct &nbsp; </a></h1><br><br>
+        <h1><a href="/blog" class="button style2"> &nbsp; Organisez votre Hackathon &nbsp;  / &nbsp; Organise your hackathon &nbsp; </a></h1><br><br>
+        <h1><a href="/blog" class="button style2"> &nbsp; Participez à l'évenement public &nbsp;  / &nbsp; Join the public event &nbsp; </a></h1><br><br>
+
+
+
     </section>
 
     <!-- Banner -->
     <section id="banner" style="line-height:150%; background-color:#71b6e9;color:#fff;">
         <header>
+
+
             3ème édition – 3rd edition
             <h2>Open Geneva hackathons</h2>
             <br>
@@ -163,6 +173,7 @@
     </article>
 
     <!-- Map -->
+    <!--
     <article class="container box style2 " style="background-color:#ffffff;opacity:0.9;">
         <div class="myrow mymap">
             <div class="col-3 mylegenda white">
@@ -180,7 +191,13 @@
             <div class="col-9"></div>
         </div>
     </article>
+    -->
 
+<article class="container box style2 " style="background-color:#ffffff;opacity:0.9;">
+  <div class="myrow">
+  <iframe src="http://129.194.69.137/map/" width="100%" height="500"></iframe>
+</div>
+</article>
 
     <!-- Feature 2 -->
     <article class="container box style2" style="background:#ececec;opacity:0.9;">
@@ -285,7 +302,7 @@
             <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
             <li><a href="#" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
             <li><a href="https://github.com/opengeneva" class="icon fa-github"><span class="label">GitHub</span></a></li>
-            <li><a href="mailto:opengeneva-register@googlegroups.com" class="icon fa-envelope"><span class="label">Mail</span></a></li>
+            <li><a href="mailto:hello@opengeneva.org" class="icon fa-envelope"><span class="label">Mail</span></a></li>
         </ul>
         <div class="copyright">
             <ul class="menu">
