--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <span class="stretch" style="text-shadow: 3px 3px 0px #1c1c1c;">HACKATHONS</span><br>
         <span class="date" style="text-shadow: 3px 3px 0px #1c1c1c;">12 - 14 May 2017</span><br><br><br>
 
-        <h1><a href="/blog" class="button style2"> &nbsp; Participez à un Hackathon  &nbsp;  / &nbsp; Join a Hackathon &nbsp; </a></h1><br><br>
-        <h1><a href="/blog" class="button style2"> &nbsp; Trouver un Hackathon pour votre projet &nbsp;  / &nbsp; Find a Hackathon for your proejct &nbsp; </a></h1><br><br>
-        <h1><a href="/blog" class="button style2"> &nbsp; Organisez votre Hackathon &nbsp;  / &nbsp; Organise your hackathon &nbsp; </a></h1><br><br>
-        <h1><a href="/blog" class="button style2"> &nbsp; Participez à l'évenement public &nbsp;  / &nbsp; Join the public event &nbsp; </a></h1><br><br>
+        <h1><a href="blog" class="button style2"> &nbsp; Participez à un Hackathon  &nbsp;  / &nbsp; Join a Hackathon &nbsp; </a></h1><br><br>
+        <h1><a href="blog" class="button style2"> &nbsp; Trouver un Hackathon pour votre projet &nbsp;  / &nbsp; Find a Hackathon for your proejct &nbsp; </a></h1><br><br>
+        <h1><a href="blog" class="button style2"> &nbsp; Organisez votre Hackathon &nbsp;  / &nbsp; Organise your hackathon &nbsp; </a></h1><br><br>
+        <h1><a href="blog" class="button style2"> &nbsp; Participez à l'évenement public &nbsp;  / &nbsp; Join the public event &nbsp; </a></h1><br><br>
 
 
 
